crates/compiler/semantic/src/validation/tests/snapshots/cairo_m_compiler_semantic__validation__tests__struct_field_validation_diagnostics.snap
---
source: crates/compiler/semantic/src/validation/tests/mod.rs
expression: snapshot_content
---
Fixture: struct_field_validation.cm
============================================================
Source code:
struct Point {
    x: felt,
    y: felt
}

func test() {
    let p = Point { x: 1, y: 2 }; // OK: all fields defined
    let x_val = p.x; // OK: p exists, x is a field
    let bad_struct = UndefinedStruct { x: 1 }; // Should error: Undeclared variable 'UndefinedStruct'
    let bad_field = p.z; // Should error: Field z does not exist in struct Point
    let non_struct = 10;
    let try_access = non_struct.x; // Should error: Expected struct type, got Felt
    return();
}

============================================================
Found 6 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'x_val'
   ╭─[ <unknown>:8:9 ]
   │
 8 │     let x_val = p.x; // OK: p exists, x is a field
   │         ──┬──  
   │           ╰──── Unused variable 'x_val'
───╯

--- Diagnostic 2 ---
[1002] Warning: Unused variable 'bad_struct'
   ╭─[ <unknown>:9:9 ]
   │
 9 │     let bad_struct = UndefinedStruct { x: 1 }; // Should error: Undeclared variable 'UndefinedStruct'
   │         ─────┬────  
   │              ╰────── Unused variable 'bad_struct'
───╯

--- Diagnostic 3 ---
[1002] Warning: Unused variable 'bad_field'
    ╭─[ <unknown>:10:9 ]
    │
 10 │     let bad_field = p.z; // Should error: Field z does not exist in struct Point
    │         ────┬────  
    │             ╰────── Unused variable 'bad_field'
────╯

--- Diagnostic 4 ---
[1002] Warning: Unused variable 'try_access'
    ╭─[ <unknown>:12:9 ]
    │
 12 │     let try_access = non_struct.x; // Should error: Expected struct type, got Felt
    │         ─────┬────  
    │              ╰────── Unused variable 'try_access'
────╯

--- Diagnostic 5 ---
[2002] Error: Field z does not exist in struct Point
    ╭─[ <unknown>:10:21 ]
    │
 10 │     let bad_field = p.z; // Should error: Field z does not exist in struct Point
    │                     ┬  
    │                     ╰── Field z does not exist in struct Point
────╯

--- Diagnostic 6 ---
[2004] Error: Expected struct type, got Felt
    ╭─[ <unknown>:12:22 ]
    │
 12 │     let try_access = non_struct.x; // Should error: Expected struct type, got Felt
    │                      ─────┬────  
    │                           ╰────── Expected struct type, got Felt
────╯
